Modified \st \nd \rd \th commands to work in math and inline text.

--- a/QoMath/qomath.sty
+++ b/QoMath/qomath.sty
@@ -39,7 +39,7 @@
 \newcommand{\bra}[1]{\left<\left.{#1}\right|\right.}						%bra and ket, bra-ket is going to cause some trouble
 \newcommand{\ket}[1]{\left.\left|{#1}\right.\right>}
 
-\newcommand{\st}{^\text{st}}				%ordinal shortcuts, for use in math environment, use inline math for use in normal text
-\newcommand{\nd}{^\text{nd}}
-\newcommand{\rd}{^\text{rd}}
-%\renewcommand{\th}{^\text{th}}			%unsure whether to overwrite \th or rename to something else
+\newcommand{\st}{\textsupercript{st}}				%ordinal shortcuts, for use in math environment and inline text
+\newcommand{\nd}{\textsuperscript{nd}}
+\newcommand{\rd}{\textsuperscript{rd}}
+\renewcommand{\th}{\textsuperscript{th}}			%unsure whether to overwrite \th or rename to something else
