--- a/QoMath/qomath.sty
+++ b/QoMath/qomath.sty
@@ -4,6 +4,8 @@
 \RequirePackage{amsmath}
 \RequirePackage{amssymb}
 
+\let\thorne\th						%renaming a command that would otherwise be replaced
+
 \newcommand{\uvec}[1]{\hat{x}}			%unit vector in the style of the normal \vec command
 
 %\renewcommand{\vec}[1]{\mathbf{#1}}		%bold style \vec and \uvec commands to be implemented as an option with the package later
@@ -38,8 +40,14 @@
 
 \newcommand{\bra}[1]{\left<\left.{#1}\right|\right.}						%bra and ket, bra-ket is going to cause some trouble
 \newcommand{\ket}[1]{\left.\left|{#1}\right.\right>}
+\newcommand{\Braket}[2]{\left<\left.{#1}\,\right|\left.{#2}\right.\right>}		%\bra-ket prototypes, probably not going stay as this
+\newcommand{\braKet}[2]{\left<\left.{#1}\right.\left|\,{#2}\right.\right>}		%the idea is you switch versions based on which side is taller
 
-\newcommand{\st}{\textsupercript{st}}				%ordinal shortcuts, for use in math environment and inline text
+\newcommand{\st}{\textsuperscript{st}}		%ordinal shortcuts, for use in math environment and inline text
 \newcommand{\nd}{\textsuperscript{nd}}
 \newcommand{\rd}{\textsuperscript{rd}}
-\renewcommand{\th}{\textsuperscript{th}}			%unsure whether to overwrite \th or rename to something else
+\renewcommand{\th}{\textsuperscript{th}}
+
+\newcommand{\bigO}[1]{\text{O}\lrbracket{#1}}	%BIG O
+
+\newcommand{\eTo}[1]{e^{^{#1}}}			%exponentials with extra space for very large exponents
