Made \braket work without an addtional package, modified the spacing on \bra, \ket, \bigO, \fullint, added \isotope and \eeTo

--- a/QoMath/qomath.sty
+++ b/QoMath/qomath.sty
@@ -4,8 +4,6 @@
 \RequirePackage{amsmath}
 \RequirePackage{amssymb}
 
-\RequirePackage{ifthen} % I don't like needing this package, it's quite bulky and it'd be good if we can remove it eventually
-
 \let\thorne\th						%renaming a command that would otherwise be replaced
 
 \newcommand{\uvec}[1]{\hat{x}}			%unit vector in the style of the normal \vec command
@@ -38,24 +36,24 @@
 
 \newcommand{\ullimit}[2]{^{^{#2}}_{_{#1}}}	%Integrals, [u]pper-[l]ower [limit]s (from 1st argument to 2nd argument)
 \newcommand{\limint}[2]{\int\ullimit{#1}{#2}}
-\newcommand{\fullint}[4]{\limint{#1}{#2}{#3}\,\text{d}{#4}}
+\newcommand{\fullint}[4]{\limint{#1}{#2}\!{#3}\,\text{d}{#4}}
 
-\newcommand{\bra}[1]{\left<\left.{#1}\right|\right.}						%bra and ket, bra-ket is going to cause some trouble
-\newcommand{\ket}[1]{\left.\left|{#1}\right.\right>}
-% \newcommand{\Braket}[2]{\left<\left.{#1}\,\right|\left.{#2}\right.\right>}		%\bra-ket prototypes, probably not going stay as this
-% \newcommand{\braKet}[2]{\left<\left.{#1}\right.\left|\,{#2}\right.\right>}		%the idea is you switch versions based on which side is taller
+\newcommand{\bra}[1]{\left<\left.\!{#1}\right|\right.\!}						%bra and ket, bra-ket is going to cause some trouble
+\newcommand{\ket}[1]{\left.\!\left|{#1}\right.\!\right>}
 \newcommand{\braket}[2]{
     \newdimen\leftheight
     \setbox0=\hbox{\ensuremath{#1}}
-    \leftheight=\ht0 \advance\leftheight by \dp0
+    \leftheight=\ht0
+    \advance\leftheight by \dp0
     \newdimen\rightheight
     \setbox0=\hbox{\ensuremath{#2}}
-    \rightheight=\ht0 \advance\rightheight by \dp0
-    \ifthenelse{\lengthtest{\leftheight > \rightheight}}{
-        \ensuremath{\left\langle \left. #1 \right| #2 \right\rangle}
-    }{
-        \ensuremath{\left\langle #1 \left| #2 \right. \right\rangle}
-    }
+    \rightheight=\ht0
+    \advance\rightheight by \dp0
+    \ifdim\leftheight>\rightheight
+        \ensuremath{\left<\left.\!{#1}\right|{#2}\right>}
+    \else
+        \ensuremath{\left<{#1}\left|{#2}\right.\!\right>}
+    \fi
 }
 
 \newcommand{\st}{\textsuperscript{st}}		%ordinal shortcuts, for use in math environment and inline text
@@ -63,6 +61,9 @@
 \newcommand{\rd}{\textsuperscript{rd}}
 \renewcommand{\th}{\textsuperscript{th}}
 
-\newcommand{\bigO}[1]{\text{O}\lrbracket{#1}}	%BIG O
+\newcommand{\bigO}[1]{\text{O}\!\lrbracket{#1}}	%BIG O
 
-\newcommand{\eTo}[1]{e^{^{#1}}}			%exponentials with extra space for very large exponents
+\newcommand{\eTo}[1]{e^{#1}}				%exponentials
+\newcommand{\eeTo}[1]{e\!^{^{#1}}}			%extra space for very large exponents
+
+\newcommand{\isotope}[3]{{}^{#2}_{#3}\text{#1}}
